fix nowrap

--- a/css/activityhero.css
+++ b/css/activityhero.css
@@ -154,7 +154,7 @@ html, body {
 }
 
 .white-bg img {
-	width: 120px;
+	width: 145px;
 }
 
 .white-bg h4 {
